# lido-zkllvm-accounting-circuit

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  requirements.txt
cmake/: CircuitCompile.cmake
codegen/: circuit.cpp  circuit_input.py  codegen_circuit.py  constants.py  eth_consensus_layer_ssz.py  eth_ssz_utils.py
scripts/: config.py  eth_consensus_layer_ssz.py  gen_balances.py  requirements.txt  run.sh  types.py
src/: CMakeLists.txt  circuit-input.json  circuit.cpp  circuit.inp  circuit_private.inp  circuit_public.inp  hash.hpp  lib.hpp  utils.hpp
test/: CMakeLists.txt  common.hpp  hash.cpp  lib.cpp  tracing.hpp
test/data/: balances_50sequential.inp
